# genetic-sat

./: Cargo.toml  README.md
.github/workflow/: check.yml  test.yml
.github/workflows/: check.yml  test.yml
formulae/: README.md
src/: genetics.rs  lib.rs  main.rs  optimizer.rs  parse_arguments.rs  parse_dimacs.rs  sat.rs
