[package]
name = "genetic_sat"
version = "0.1.0"
edition = "2021"
authors = ["SamyAB <dev@samyab.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
rand = "0.8.5"

[dev-dependencies]
tempfile = "3.8.1"
