[package]
name = "genetic_sat"
version = "0.1.0"
edition = "2021"
authors = ["SamyAB <dev@samyab.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
rand = "0.8.5"

[dev-dependencies]
tempfile = "3.13.0"

[lints.clippy]
dbg_macro = "deny"
empty_structs_with_brackets = "deny"
float_cmp_const = "deny"
if_then_some_else_none = "deny"
same_name_method = "deny"
tests_outside_test_module = "deny"
unseparated_literal_suffix = "deny"
unwrap_used = "deny"
pedantic = { level = "deny", priority = -1 }

